--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <section id="food" class="food">
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title">Kuliner Khas</h2>
+        <h2 class="section-title">Kuliner Pulau Penyengat</h2>
         <p class="section-description">
           Nikmati kelezatan masakan tradisional Pulau Penyengat
         </p>
@@ -195,7 +195,7 @@
             <img src="rajaalihaji.jpeg" alt="Chef">
           </div>
           <div class="hero-text">
-            <h3 class="hero-title">Tokoh Inspiratif Pulau Penyenggat</h3>
+            <h3 class="hero-title">Tokoh Inspiratif Pulau Penyengat</h3>
             <p>
               Raja Ali Haji adalah sastrawan dan tokoh Melayu yang berpengaruh.
               Karyanya Gurindam Dua Belas penuh nasihat bijak dan nilai moral.
